--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.versus">
+    package="com.nested.versus">
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -13,9 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ItemImageActivity"></activity>
-        <activity android:name=".CategoryActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name="com.nested.versus.ItemImageActivity"></activity>
+        <activity android:name="com.nested.versus.CategoryActivity" />
+        <activity android:name="com.nested.versus.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,7 +25,7 @@
 
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="com.example.android.fileprovider"
+            android:authorities="com.nested.android.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
